<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, YatzyActivity!</string>
    <string name="app_name">Yatzy</string>
    <string name="resumegame">Resume Game</string>
    <string name="newgame">New Game</string>
    <string name="highscore">High Score</string>
    <string name="button">Button</string>
    <string name="players">How many players?</string>
    <string name="one">1</string>
    
    <string name="players_prompt">How many </string>
    <string-array name="players_array">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
    </string-array>
        <string name="startgame">Start Game</string>
        <string name="nrofplayers">Select nr of players</string>
        <string name="names">Player names</string>
        <string name="game">Game</string>
        <string name="highwarning">You are about to delete all highscores. Are you sure?</string>
        <string name="winner_is">The winner is</string>
        <string name="combosText">Combos</string>
        <string name="space"></string>

	
</resources>
