<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/startnewgametext" android:layout_width="fill_parent" android:text="@string/newgame"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/selectPlayersText" android:text="@string/nrofplayers">
        <requestFocus></requestFocus>
    </TextView>
        <Spinner 
        android:id="@+id/nrOfPlayers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/players"
    />
        <TextView android:id="@+id/nrOfPlayersText" android:layout_height="wrap_content" android:text="@string/names" android:layout_width="fill_parent"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/player1"></EditText>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/player2"></EditText>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/player3"></EditText>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/player4"></EditText>
        <Button android:text="@string/startgame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/startButton"></Button>
</LinearLayout>
