
    <TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/game" android:id="@+id/headText"></TextView>
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/combosText" android:id="@+id/combosText"></TextView>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/playerNameText" android:text="@string/space"></TextView>
        </TableRow>
        <ScrollView android:id="@+id/scrollView1" android:layout_width="wrap_content" android:layout_height="300dip">
                <TableLayout android:layout_width="wrap_content" android:id="@+id/tableLayout2" android:layout_height="300dip">
            		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/onesText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1's"></TextView>
                		<TextView android:id="@+id/ones" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow> 
            		<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/twosText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2's"></TextView>
                		<TextView android:id="@+id/twos" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>                 
            		<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/threesText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3's"></TextView>
                		<TextView android:id="@+id/threes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background" ></TextView>
            		</TableRow>  
            		<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/foursText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="4's"></TextView>
                		<TextView android:id="@+id/fours" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>  
            		<TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/fivesText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="5's"></TextView>
                		<TextView android:id="@+id/fives" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>  
            		<TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/twosText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="6's"></TextView>
                		<TextView android:id="@+id/sixes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/sumText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Sum"></TextView>
                		<TextView android:id="@+id/sum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>  
            		<TableRow android:id="@+id/tableRow8" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/bonusText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Bonus"></TextView>
                		<TextView android:id="@+id/bonus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow9" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/onePairText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="One pair"></TextView>
                		<TextView android:id="@+id/onePair" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
                	</TableRow>
            		<TableRow android:id="@+id/tableRow10" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/twoPairsText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Two pairs"></TextView>
                		<TextView android:id="@+id/twoPair" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow11" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/tripsText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Trips"></TextView>
                		<TextView android:id="@+id/trips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow12" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/quadsText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Quads"></TextView>
                		<TextView android:id="@+id/quads" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow13" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/smallStraightText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Small straight"></TextView>
                		<TextView android:id="@+id/smallStraight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow14" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/bigStraightText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Big straight"></TextView>
               			<TextView android:id="@+id/bigStraight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow15" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/fullHouseText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Full house"></TextView>
                		<TextView android:id="@+id/fullHouse" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow16" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/chanceText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Chance"></TextView>
                		<TextView android:id="@+id/chance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow17" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/yatzyText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Yatzy"></TextView>
                		<TextView android:id="@+id/yatzy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            		<TableRow android:id="@+id/tableRow18" android:layout_width="wrap_content" android:layout_height="wrap_content">
                		<TextView android:id="@+id/totalText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Total"></TextView>
                		<TextView android:id="@+id/total" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space" android:background="@drawable/background"></TextView>
            		</TableRow>
            	</TableLayout>    
        </ScrollView>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:orientation="vertical">
            <Button android:text="Done" android:id="@+id/doneButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="right" android:layout_marginRight="14dip"></Button>
        </LinearLayout>	     
	<TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
   
     <TableRow android:id="@+id/tableRow19" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<ImageView android:id="@+id/dice1" android:src="@drawable/one" android:layout_height="50dip" android:layout_width="50dip"></ImageView>
 			<ImageView android:id="@+id/dice2" android:src="@drawable/two" android:layout_height="50dip" android:layout_width="50dip"></ImageView>
     		<ImageView android:id="@+id/dice3" android:src="@drawable/three" android:layout_height="50dip" android:layout_width="50dip"></ImageView>
     		<ImageView android:id="@+id/dice4" android:src="@drawable/four" android:layout_height="50dip" android:layout_width="50dip"></ImageView>
     		<ImageView android:id="@+id/dice5" android:src="@drawable/five" android:layout_height="50dip" android:layout_width="50dip"></ImageView>
			<Button android:id="@+id/throwButton" android:text="Throw" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>	     
     </TableRow>
      </TableLayout>
    </TableLayout>
